test/1.2/errors/T_EIFREF.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "simics/devs/signal.dml";
connect s {
    interface signal;
}
data bool b;
method post_init {
    /// ERROR EIFREF
    ($b ? $s.signal.signal_raise : $s.signal.signal_lower)();
}
